<resources>
    <string name="app_name">Auditorias MKT</string>
    <string name="login_title">Ejecucion Impecable Nutresa</string>
    <string name="infoListaC">Ingrese un dato del cliente (Id,nombre del dueño o establecimiento):</string>
    <string name="confCliente">Confirme que el cliente que ha seleccionado es: </string>
    <string name="confirmar">Confirmar</string>
    <string name="anular">Nueva búsqueda</string>
    <string name="volver">Cancelar</string>
    <string name="volver_menu">Volver al menú</string>
    <string name="conf_datos">Confirme que los datos que actualmente están en pantalla son los datos definitivos del cliente (Al confirmar, se cargará la información en las tablas y esto tardará entre 8 y 20 segundos)</string>
    <string name="conf_espac">¿Desea evaluar este espacio?</string>
    <string name="conf_categ">¿Desea evaluar esta categoría?</string>
    <string name="conf_borrar_datos">Si presiona "Aceptar", confirma que perderá los datos  correspondientes a este ítem, lo que incluye Categorias,POCs, Participaciones,Estandares/Skus (SEGUN APLIQUE)</string>
    <string name="conf_volver">Existen algunos (Items / Fotos) sin evaluar y/o incompletos, ¿confirma que desea volver?</string>
    <string name="conf_esp">¿Existe este espacio en el establecimiento en el que se encuentra?</string>
    <string name="conf_cat">¿Existe esta categoría en el establecimiento en el que se encuentra?</string>
    <string name="conf_estnd">¿Se cumple este estándar en el establecimiento en el que se encuentra?</string>
    <string name="conf_sku">¿Existe este SKU en el establecimiento en el que se encuentra?</string>
    <string name="conf_part"></string>
    <string name="confirmacion_final">Confirme que esto es lo que desea evaluar: </string>
    <string name="error_flujo">Existe un error con el flujo de la aplicación, intente en un momento y reporte el error</string>
    <string name="menu1">Sincronizar Datos</string>
    <string name="menu2">Aplazar encuesta</string>
    <string name="menu3">Rechazar encuesta</string>
    <string name="menu41">Observaciones</string>
    <string name="menu5">Tomar foto de fachada</string>
    <string name="menu6">Tomar selfie</string>
    <string name="menu4">Generales</string>
    <string name="menu7">Revisión de errores</string>
    <string name="menu8">Salir</string>
    <string name="menu9">Cerrar sesión</string>
    <string name="error_foto">Algo salió mal con la imagen, recuerde que esta fotografía es obligatoria</string>
    <string name="entre">Entrepaños a agregar:</string>
    <string name="intro_part">Ingrese los datos correspondientes:</string>
    <string name="enun_retomar">En caso de querer retomar una auditoría, haga click sobre la auditoría que va a retomar</string>
    <string name="foto_est">No es posible tomar la foto, revise que todos los estándares tengan respuesta</string>
    <string name="observ">Ingrese aquí sus observaciones...</string>
    <string name="contras">Confirme escribiendo aqui la palabra mencionada en el encabezado</string>
    <string name="rechazo">Razón de rechazo:</string>
    <string name="premio">Seleccione el Premio:</string>
    <string name="premiof">Tome una foto al Formato de premios físico, recuerde que de no coincidir con lo ingresado en el aplicativo, la encuesta podria no ser válida</string>
    <string name="nombre_rechazo">Persona que lo atendió</string>
    <string name="aplazar">Confirme que desea aplazar la auditoría</string>
    <string name="cerrarses">Si se encuentra en una auditoría, al cerrar sesión todos los datos se perderán,¿confirma que desea cerrar sesión?</string>}
    <string name="regresar">Desea Regresar a Categorias</string>
    <string name="skus_calidad">Al oprimir la opción de "SI" confirma que el SKU de calidad existe y se procederá a tomar la foto correspondiente en caso de no haberla tomado previamente</string>
    <string name="activaciones">Al oprimir la opción de "SI" confirma que el activo existe y se procederá a tomar la foto correspondiente en caso de no haberla tomado previamente</string>
</resources>
