<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondosm"
    tools:context=".Rechazar">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_blanco" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/francois_one"
        android:text="Rechazar auditoría"
        android:textAlignment="center"
        android:textColor="@color/azulletras"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/tVEst2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/francois_one"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/rechazo"
        android:textAlignment="viewStart"
        android:textColor="@color/blanco_transparente"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinnerRechazos"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVEst2" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/francois_one"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="Observaciones: "
        android:textAlignment="viewStart"
        android:textColor="@color/blanco_transparente"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRechazos" />

    <EditText
        android:id="@+id/etObservRecha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:inputType="textMultiLine"
        android:textColor="@color/blanco_transparente"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/francois_one"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/nombre_rechazo"
        android:textAlignment="viewStart"
        android:textColor="@color/blanco_transparente"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etNombreRecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNombreRecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:fontFamily="@font/francois_one"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/blanco_transparente"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btmenu"
        android:fontFamily="@font/francois_one"
        android:onClick="Volver"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/volver"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:background="@drawable/btmenu"
        android:fontFamily="@font/francois_one"
        android:onClick="Terminar"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="Terminar"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button3" />
</android.support.constraint.ConstraintLayout>